k8s/vision-service/service.yml
apiVersion: v1
kind: Service
metadata:
  name: vision-service
  namespace: vision-system
  labels:
    app: vision-service
spec:
  type: ClusterIP
  selector:
    app: vision-service
  ports:
    - name: http
      port: 5100
      targetPort: 5100
      protocol: TCP
